examples/test/testpolicy18654.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18654
  namespace: namespace210
spec:
  podSelector:
    matchLabels:
      key36: value13
      key18: value26
      key43: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value26
          key47: value3
          key16: value26
      podSelector:
        matchLabels:
          key26: value4
